--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.33.0
 aiofiles==23.2.1
 aiohttp==3.9.5
 aiosignal==1.3.1
@@ -95,6 +96,7 @@ pillow==10.3.0
 proglog==0.1.10
 proto-plus==1.24.0
 protobuf==4.25.3
+psutil==6.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
